<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <import type="android.view.View" />
    <variable
      name="user"
      type="learning.rafaamo.languages.data.datasource.entity.User" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin">

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintVertical_bias="0"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
          android:id="@+id/imageView"
          imageUrl="@{user.image}"
          android:layout_width="@dimen/space_20"
          android:layout_height="@dimen/space_20"
          android:scaleType="centerCrop"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:shapeAppearanceOverlay="@style/circleImageView" />

        <com.google.android.material.chip.Chip
          android:id="@+id/btnLike"
          style="@style/Widget.Material3.Chip.Suggestion"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{@plurals/_user_likes(user.likes, user.likes)}"
          android:checked="@{user.liked}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/tvDescriptionLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_2"
          android:text="@string/_user_description_label"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/btnLike" />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/tvDescription"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{user.description}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLabel" />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/tvEmailLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_2"
          android:text="@string/_user_email_label"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/tvEmail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{user.email}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tvEmailLabel" />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/tvPhoneLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_2"
          android:text="@string/_user_phone_label"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tvEmail" />

        <com.google.android.material.textview.MaterialTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{user.phone}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tvPhoneLabel" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>